 - general: made all single argument constructors explicit where appropriate
 - general: removed lua::var (custom std::any) and added utils::variant (using std::variant)
 - general: renamed "sensibility" to "sensitivity"
 - general: renamed "overed" to "hovered"
 - general: now using non-static data member initialisers whenever possible
 - lua: added support for Lua versions later than 5.1
 - lua: removed unusual constructs to serialize a table
 - lua: starting switching to sol2 to manage the Lua state
 - input: simplified class hierarchy by merging handler+handler_impl into input::source
 - input: vastly improved performance of SFML input implementation
 - input: get_key_name() is now platform-independent, and only returns English
 - input: added set_mouse_cursor() and reset_mouse_cursor()
 - input: added get_interface_scaling_factor_hint()
 - input: added set_interface_scaling_factor()
 - gui: added error message when trying to anchor to an object managed by another renderer
 - gui: added error message when trying to anchor to a "$parent..." when there is no parent
 - gui: added support for nested manually-rendered objects (scroll frame inside scroll frame)
 - gui: added renderer::set_view() to allow arbitrary view transforms
 - gui: added color::from_hsv and color::to_hsv
 - gui: renamed gui::manager_impl into gui::renderer
 - gui: renamed gui::gl::manager into gui::gl::renderer
 - gui: renamed gui::gl::matrix4f into gui::matrix4f and reworked internals of the class
 - gui: renamed frame::on into frame::on_script
 - gui: renamed uiobject::fire_udpate_borders to uiobject::notify_borders_need_update
 - gui: renamed color::chanel to color::channel
 - gui: removed Frame:on from Lua API (instead, call scripts directly, e.g.: frame:on_update())
 - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
 - gui: sprite is now a value type
 - gui: the GUI will now properly handle render window being resized